# file-organizer

./: .clangd  .gitignore  CMakeLists.txt  README.md  example_config.txt
src/: CMakeLists.txt
src/conditions/: AgeCondition.cpp  AgeCondition.h  ExtensionCondition.cpp  ExtensionCondition.h  ICondition.h  SizeCondition.cpp  SizeCondition.h
src/core/: ConfigurationParser.cpp  ConfigurationParser.h  DirectoryOrganizer.cpp  DirectoryOrganizer.h  Logger.cpp  Logger.h  RuleFactory.cpp  RuleFactory.h  RuleParameter.h  ValueParser.h  main.cpp
src/models/: ItemRepresentation.cpp  ItemRepresentation.h
src/rules/: ConfigurableRule.cpp  ConfigurableRule.h  ISortingRule.h
tests/: CMakeLists.txt  test_age_condition.cpp  test_configurable_rule.cpp  test_configuration_parser.cpp  test_directory_organizer.cpp  test_extension_condition.cpp  test_integration.cpp  test_item_representation.cpp  test_logger.cpp  test_rule_factory.cpp  test_size_condition.cpp  test_templates.cpp
